--- a/ex008/index.html
+++ b/ex008/index.html
@@ -6,5 +6,10 @@
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
     <title>Semântica</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Exemplo de semântica</h1>
+    <p>Esse endereço seria um clicavel em alguns dispositivos mostrando o endereço
+        <address>Rua olimpiadas, 121, São Paulo, SP </address> 
+    </p>
+  </body>
 </html>
