--- a/ex008/index.html
+++ b/ex008/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,9 +7,16 @@
     <title>Semântica</title>
   </head>
   <body>
-    <h1>Exemplo de semântica</h1>
-    <p>Esse endereço seria um clicavel em alguns dispositivos mostrando o endereço
-        <address>Rua olimpiadas, 121, São Paulo, SP </address> 
+    <h1>Formatação de texto</h1>
+    <h2>Negrito/Destaque</h2>
+    <p>Maneira não semantica de utilizar o <b>negrito</b> com a tag B</p>
+    <p>
+      <b>Maneira semantica</b> de utilizar o <strong>destaque</strong> com a tag
+      strong
     </p>
+    <h2>Italico / Enfase</h2>
+    <p>Maneira não semantica de utilizar o <i>italico</i> com a tag i</p>
+    <p><b>Maneira semantica</b> de utilizar o <em>Enfase</em> com a tag em</p>
+    <h2></h2>
   </body>
 </html>
