--- a/ex008.1/index.html
+++ b/ex008.1/index.html
@@ -50,5 +50,21 @@ print('Fim do programa!')
       <em>cite=""</em> informa ao <strong>SEO</strong> que aquele texto é
       citação do link nele informado
     </p>
+    <h2>Abreviações</h2>
+    <p>
+      Estou estudando <abbr title="HyperText Markup Language">HTML</abbr> e
+      <abbr title="Cascading Style Sheets">CSS</abbr>, estou adorando
+    </p>
+    <p>
+      Pode sera adicionado a abreviações seus significados com a tag
+      &lt;abbr&gt; informando dentro seu <em>title=""</em>
+    </p>
+    <h2>Texto invertido</h2>
+    <p>
+      <bdo dir="rtl"
+        >estou aprendendo a criar coisas em
+        <abbr title="HyperText Markup Language">HTML</abbr></bdo
+      >
+    </p>
   </body>
 </html>
