--- a/ex008.1/index.html
+++ b/ex008.1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Citações e Códigos</title>
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
   </head>
   <body>
     <h1>Outras formatações</h1>
