--- a/ex010/index.html
+++ b/ex010/index.html
@@ -7,6 +7,20 @@
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
   </head>
   <body>
-    <h1></h1>
+    <h1>Links e Ancoras</h1>
+    <a href="https://www.tiktok.com/pt-BR/" target="_self" hreflang="en"
+      >TikTok na janela atual</a
+    >
+    <br />
+    <a href="https://www.tiktok.com/pt-BR/" target="_blank" hreflang="en"
+      >TikTok em outra janela</a
+    >
+    <br />
+    <a href="favicon.svg" download="favicon.svg" type="image/svg">
+      downlaod do favicon</a
+    >
+    <a href="https://github.com/MarloIkhodi" target="_blank"
+      ><img src="https://skillicons.dev/icons?i=github" alt="github icon"
+    /></a>
   </body>
 </html>
