--- a/ex010/index.html
+++ b/ex010/index.html
@@ -3,24 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Links e Âncoras</title>
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
   </head>
   <body>
-    <h1>Links e Ancoras</h1>
-    <a href="https://www.tiktok.com/pt-BR/" target="_self" hreflang="en"
-      >TikTok na janela atual</a
-    >
-    <br />
-    <a href="https://www.tiktok.com/pt-BR/" target="_blank" hreflang="en"
-      >TikTok em outra janela</a
-    >
-    <br />
+    <h1>Links e Âncoras</h1>
+    <p>
+      Voce pode abrir o
+      <a href="https://www.tiktok.com/pt-BR/" target="_self" hreflang="en"
+        >TikTok</a
+      >
+      na janela atual. Ou voce pode abrir o
+      <a href="https://www.tiktok.com/pt-BR/" target="_blank" hreflang="en"
+        >TikTok</a
+      >
+      em outra janela
+    </p>
     <a href="favicon.svg" download="favicon.svg" type="image/svg">
       downlaod do favicon</a
     >
-    <a href="https://github.com/MarloIkhodi" target="_blank"
-      ><img src="https://skillicons.dev/icons?i=github" alt="github icon"
-    /></a>
+    <p>
+      veja mais em
+      <a href="../ex010.1/index.html" target="_blank" rel="next"
+        >Links e Âncoras 2!</a
+      >
+    </p>
   </body>
 </html>
