--- a/ex010/index.html
+++ b/ex010/index.html
@@ -19,7 +19,7 @@
       >
       em outra janela
     </p>
-    <a href="favicon.svg" download="favicon.svg" type="image/svg">
+    <a href="favicon.svg" download="favicon.svg" type="image/svg+xml">
       downlaod do favicon</a
     >
     <p>
