--- a/ex011/index.html
+++ b/ex011/index.html
@@ -24,5 +24,24 @@
         type="image/svg+xml" />
       <img src="Images/image-big.svg" alt="big"
     /></picture>
+    <h1>Audio!</h1>
+    <p>
+      Lembrando que em audio também tem direitos autorais! <br />Além de que,
+      deve tomar cuidado com o tamanho do áudio.
+    </p>
+    <audio preload="metadata" controls autoplay loop>
+      <source src="audio/guanacast-33.mp3" type="audio/mpeg" />
+      <source src="audio/guanacast-33.wav" type="audio/wav" />
+      <source src="audio/guanacast-33.ogg" type="audio/ogg" />
+      <p>
+        Seu navegador não suporta áudio!
+        <a
+          href="audio/guanacast-33.mp3"
+          download="guanacast-33.mp3"
+          type="audio/mpeg"
+        ></a>
+      </p>
+    </audio>
+    <!--formatos de audio MP3, WAV e OGG-->
   </body>
 </html>
