--- a/ex011/index.html
+++ b/ex011/index.html
@@ -27,9 +27,9 @@
     <h1>Audio!</h1>
     <p>
       Lembrando que em audio também tem direitos autorais! <br />Além de que,
-      deve tomar cuidado com o tamanho do áudio.
+      deve tomar cuidado com o tamanho do mesmo.
     </p>
-    <audio preload="metadata" controls autoplay loop>
+    <audio preload="metadata" controls loop>
       <source src="audio/guanacast-33.mp3" type="audio/mpeg" />
       <source src="audio/guanacast-33.wav" type="audio/wav" />
       <source src="audio/guanacast-33.ogg" type="audio/ogg" />
@@ -43,5 +43,44 @@
       </p>
     </audio>
     <!--formatos de audio MP3, WAV e OGG-->
+    <h1>Videos!</h1>
+    <p>
+      Lembrando que em videos também tem direitos autorais! <br />Além de que,
+      deve tomar cuidado com o tamanho do mesmo.
+    </p>
+    <video width="896" poster="Images/thumb.jpg" loop controls>
+      <source src="videos/blue.mp4" type="video/mp4" />
+      <source src="videos/blue.webm" type="video/webm" />
+      <source src="videos/blue.ogv" type="video/ogg" />
+      <p>
+        Seu navegador não suporta videos!
+        <a href="videos/blue.mp4" download="blue.mp4" type="video/mp4"></a>
+      </p>
+    </video>
+    <h1>Videos do Youtube!</h1>
+    <iframe
+      width="896"
+      height="504"
+      src="https://www.youtube.com/embed/TJRyKe2IAU8?si=5a4CE9cOG7bqrcEy"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen
+    ></iframe>
+    <h1>Video do Vimeo abaixo!</h1>
+    <iframe
+      src="https://player.vimeo.com/video/197093965?h=7fbc516b5a&loop=1"
+      width="896"
+      height="504"
+      frameborder="0"
+      allow="autoplay; fullscreen; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+    <p>
+      <a href="https://vimeo.com/197093965">Reel 2016</a> from
+      <a href="https://vimeo.com/wabbla">Alvise Zennaro</a> on
+      <a href="https://vimeo.com">Vimeo</a>.
+    </p>
   </body>
 </html>
