--- a/ex011/index.html
+++ b/ex011/index.html
@@ -6,6 +6,7 @@
     <title>Imagens, Videos, Audios</title>
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
   </head>
+
   <body>
     <h1>Imagens Dinamicas</h1>
     <p>
@@ -17,13 +18,15 @@
       <source
         media="(max-width:750px )"
         srcset="Images/image-small.svg"
-        type="image/svg+xml" />
+        type="image/svg+xml"
+      />
       <source
         media="(max-width: 1050px)"
         srcset="Images/image-medium.svg"
-        type="image/svg+xml" />
-      <img src="Images/image-big.svg" alt="big"
-    /></picture>
+        type="image/svg+xml"
+      />
+      <img src="Images/image-big.svg" alt="big" />
+    </picture>
     <h1>Audio!</h1>
     <p>
       Lembrando que em audio também tem direitos autorais! <br />Além de que,
