--- a/module-two/Fontes - CSS/index.html
+++ b/module-two/Fontes - CSS/index.html
@@ -8,10 +8,13 @@
       @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
       body {
-        /* font-size: 1em;
-        font-family: "Work Sans", sans-serif;
+        /* 
+        font-style: italic; 
         font-weight: bold;
-        font-style: italic;*/
+        font-size: 1em;
+        font-family: "Work Sans", sans-serif;
+
+       */
         font: italic bolder 1em "work sans", sans-serif;
       }
     </style>
