--- a/module-two/Caixas - CSS/index.html
+++ b/module-two/Caixas - CSS/index.html
@@ -9,19 +9,25 @@
         margin: 0px;
         padding: 0px;
       }
+      /* block-level */
       h1 {
-        background-color: aqua;
+        background-color: gray;
         height: 300px;
         width: 300px;
         padding: 10px 20px 30px 40px;
         border: 10px solid black;
+        margin: 20px auto 20px auto;
+        outline: 10px dashed red;
       }
+
+      /* inline-level */
       a {
         text-decoration: none;
         border: 2px solid red;
       }
     </style>
   </head>
+
   <body>
     <h1>Exemplo de caixa box-level</h1>
     <p>
