--- a/Desafios/Desafio 10 - CSS/android.html
+++ b/Desafios/Desafio 10 - CSS/android.html
@@ -73,10 +73,10 @@
             </p>
             <img src="imagens/bugdroid.png" alt="#" />
             <p>
-                A principal inspiração para os traços do novo Bugdroid veio daqueles
+                A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles
                 bonequinhos que ilustram portas de banheiro para indicar o gênero de
                 cada porta. Conta a lenda que a artista estava criando em sua mesa no
-                escritório do Google e olhou para o lado dos banheiros e a
+                escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a
                 identificação foi imediata: simples, limpo, objetivo.
             </p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=01aKkhBebJnW_XP2"
@@ -110,12 +110,14 @@
                     <li>9.0 - <abbr title="Torta">Pie</abbr></li>
                 </ul>
                 <p>
-                    Infelizmente, o Android Q não existiu, pois o Google resolveu pôr
+                    Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr
                     fim a essa divertida prática e começou a usar numerações, o que deu
                     origem ao Android 10.
                 </p>
                 <p>
-                    Acesse aqui o site <a href="#">Android History</a> para conhecer a
+                    Acesse aqui o site <a href="https://www.android.com/intl/pt_pt/what-is-android/"
+                        target="_blank">Android History</a>
+                    para conhecer a
                     sequência das versões "adocicadas" e o que cada uma trouxe para o
                     sistema Android.
                 </p>
@@ -127,7 +129,8 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por Deivid Marlon para o CursoemVideo.</p>
+        <p>Site criado por <a href="https://github.com/MarloIkhodi" target="_blank">Marlon</a> para o
+            CursoemVideo.</p>
     </footer>
 </body>
 
