--- a/module-3/imagm-de-fundo/fundo-CSS.html
+++ b/module-3/imagm-de-fundo/fundo-CSS.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,10 @@
     <title>Teste de imagem de fundo</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        body {
+            background-image: url(imagens-cap19/wallpaper001.jpg);
+        }
+
         div.quadrado {
             border: 2px solid black;
             border-radius: 10px;
@@ -21,11 +25,11 @@
         }
 
         div#q2 {
-            background-image: linear-gradient(to bottom, yellow, red);
+            background-image: linear-gradient(yellow, red);
         }
 
         div#q3 {
-            background-image: url(imagens-cap19/pattern001.png);
+            background-image: url(imagens-cap19/pattern003.png);
         }
     </style>
 </head>
