--- a/module-3/Tabela/tabela01/index.html
+++ b/module-3/Tabela/tabela01/index.html
@@ -12,17 +12,15 @@
       <tr>
         <td>A1</td>
         <td>B1</td>
-        <td>C1</td>
+        <td rowspan="3">C1</td>
       </tr>
       <tr>
         <td>A2</td>
         <td>B2</td>
-        <td>C2</td>
       </tr>
       <tr>
         <td>A3</td>
         <td>B3</td>
-        <td>C3</td>
       </tr>
       <tr>
         <td>A4</td>
@@ -30,9 +28,7 @@
         <td>C4</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td>C5</td>
+        <td colspan="3">C5</td>
       </tr>
     </table>
   </body>
