--- a/module-3/Tabela/tabela02/index.html
+++ b/module-3/Tabela/tabela02/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <table>
+      <caption>
+        População das Unidades Federativas
+      </caption>
       <thead>
         <tr>
           <th>Estado</th>
