--- a/module-3/Tabela/tabela02/index.html
+++ b/module-3/Tabela/tabela02/index.html
@@ -12,6 +12,11 @@
         População das Unidades Federativas
       </caption>
       <thead>
+        <colgroup>
+          <!-- <col class="cgroup" span="2" /> -->
+          <col class="estados" />
+          <col class="populacao" />
+        </colgroup>
         <tr>
           <th>Estado</th>
           <th>População</th>
